fix flicker

--- a/assets/sass/welcome.scss
+++ b/assets/sass/welcome.scss
@@ -46,22 +46,15 @@ $gold: #daa520; // gold
     --hover-imessage: unset;
 
     .neonize {
-
       color: azure !important;
-      --color1: azure;
-      --color2: aqua;
-      --color3: dodgerblue;
-      --color4: blue;
-      // font-family: Sriracha;
-      // --interval: 1333ms;
-
-      --interval: 1s;
+      --interval: 1333ms;
+      // --interval: 1s;
       display: block;
       text-shadow:
-        0 0 10px var(--color1),
-        0 0 20px var(--color2),
-        0 0 40px var(--color3),
-        0 0 80px var(--color4);
+        0 0 10px azure,
+        0 0 20px aqua,
+        0 0 40px dodgerblue,
+        0 0 80px blue;
       will-change: filter, color;
       filter: saturate(60%);
       animation: flicker steps(100) var(--interval) 1s infinite;
@@ -842,8 +835,20 @@ and (orientation : portrait) {
 }
 
 @keyframes flicker {
-  50% {
-    color: white;
+  0% {
+    color: white !important;
+    filter: saturate(60%) hue-rotate(20deg);
+  }
+  30% {
+    color: white !important;
+    filter: saturate(200%) hue-rotate(20deg);
+  }
+  80% {
+    color: white !important;
+    filter: saturate(60%) hue-rotate(20deg);
+  }
+  100% {
+    color: white !important;
     filter: saturate(200%) hue-rotate(20deg);
   }
 }
